--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
-        <div class="flex desktop">
+        <div class="flex flexs desktop">
           <nav>
             <a href="#">Tenant Screening</a>
             <a href="#">Services</a>
@@ -39,7 +39,7 @@
             <a href="#">About</a>
             <a href="#">Contact</a>
           </nav>
-          <button id="get-started-btn-mobile"><a href="">GET STARTED</a></button>
+          <button id="get-started-btn-mobile" class="screen-tenant-btn"><a href="">GET STARTED</a></button>
           <button id="login-btn-mobile"><a href="">Login</a></button>
         </div>
       </header>
