--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <a href="#">About</a>
             <a href="#">Contact</a>
           </nav>
-          <button id="get-started-btn-mobile" class="screen-tenant-btn"><a href="">GET STARTED</a></button>
-          <button id="login-btn-mobile"><a href="">Login</a></button>
+          <button id="get-started-btn-mobile" class="screen-tenant-btns"><a href="">GET STARTED</a></button>
+          <button id="login-btn-mobile"  class="screen-tenant-btns"><a href="">Login</a></button>
         </div>
       </header>
       
