--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#">Tenant Screening</a>
             <a href="#">Services</a>
             <a href="#">Resources</a>
-            <a href="#">About</a>
+            <a href="pages/about.html">About</a>
             <a href="#">Contact</a>
           </nav>
           <button id="get-started-btn"><a href="">GET STARTED</a></button>
@@ -36,7 +36,7 @@
             <a href="#">Tenant Screening</a>
             <a href="#">Services</a>
             <a href="#">Resources</a>
-            <a href="#">About</a>
+            <a href="pages/about.html">About</a>
             <a href="#">Contact</a>
           </nav>
           <button id="get-started-btn-mobile" class="screen-tenant-btns"><a href="">GET STARTED</a></button>
@@ -191,7 +191,7 @@
       <div class="footer-section">
           <h3>Our Company</h3>
           <ul>
-              <li><a href="#">About</a></li>
+              <li><a href="pages/about.html">About</a></li>
               <li><a href="#">Contact</a></li>
               <li><a href="#">Testimonials</a></li>
               <li><a href="#">Security & Privacy</a></li>
