--- a/pages/rental.html
+++ b/pages/rental.html
@@ -91,7 +91,7 @@
                   <div class="title">Contact Information:</div>
                   <div class="field">
                     <div class="label">Email Address *</div>
-                    <input type="text" required />
+                    <input type="email" required />
                   </div>
                   <div class="field">
                     <div class="label">Mobile Number *</div>
